--- a/src/app/accounting-page/add-expense-page/add-expense-page.component.scss
+++ b/src/app/accounting-page/add-expense-page/add-expense-page.component.scss
@@ -4,7 +4,7 @@
     width: auto;
     height: auto;
     right: 100px;
-    bottom: 5px;
+    bottom: 10%;
     z-index: 2;
 }
 
