--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: 100px 1fr;
+    grid-template-rows: 100px calc(100% - 100px);
     grid-template-areas: "Div1" "Div2";
 }
 
@@ -66,6 +66,7 @@
 #Div1>*:nth-child(n+2)
 {
     height: 50px;
+    margin-bottom: 1px;
     align-self: end;
 }
 
