--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,20 @@
 
-// body
-// {
-//     margin: 0;
-//     padding: 0;
-//     width: 100vw;
-//     height: 100vh;
-// }
+body
+{
+    margin: 0 0 0 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// html, body { height: 100%; }
 
 app-root
 {
     display: block;
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
